<resources>
    <string name="app_name">DaheimKalender</string>
    <string name="starte_heutige_challenge">Starte Challenge</string>
    <string name="alte_challenges">Alte Challenges</string>
    <string name="zurueck">Zurück</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="today_challenge">Heutige Challenge!</string>
    <string name="click_here">Hier Starten</string>
    <string name="title_activity_graphic_novel">GraphicNovelActivity</string>

    <string name="title_my_diary">Mein Tagebuch</string>
    <string name="title_your_challenges">Deine Aufgaben</string>

    <string name="title_onboarding_age_input">OnboardingActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="open_onboarding">Onboarding öffnen</string>
    <string name="todays_challenge_title">Heutige Herausforderung</string>
    <string name="challenges_history_title">Bisherige Herausforderungen</string>
    <string name="settings_title">Einstellungen</string>
    <string name="onboarding_title">Willkommen bei #Daheim - Der Corona Kalender...</string>
    <string name="onboarding_age_check_title">Bitte wähle dein Alter</string>
    <string name="close_button">Button zum Verlassen des Screens</string>
    <string name="confirm_button">Bestätigen</string>
    <string name="continue_button">Weiter</string>
    <string name="open_graphic_novel">Graphic Novel öffnen</string>
    <string name="graphic_novel_challenge_title">Jetzt geht\'s los!</string>
    <string name="graphic_novel_done_title">Super gemacht!</string>
    <string name="graphic_novel_done_info">Jetzt fehlt nur noch ein Foto von deinem Erfolg. Drück auf das Kamera-Symbol und mach eins!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="lets_start">Los Geht\'s!</string>
    <string name="continues">Weiter</string>

    <string name="diary_title">MEIN TAGEBUCH</string>
    <string name="challenge">Aufgabe</string>
    <string name="completed_challenge_description">Hier siehst du nochmal die Bilder von der Aufgabe</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="your_challenge_today">Dein heutiges Abenteuer:</string>
    <string name="challenge_not_completed_yet">Du hast diese Herausforderung noch nicht beendet!</string>
    <string name="no_challenge_for_today">Für heute hast du alle Herausforderungen erledigt, komm doch morgen nochmal vorbei!</string>

    <string name="titel_material">Das brauchst du:</string>
    <string name="titel_instruction">Anleitung:</string>
    <string name="btn_complete_title">Fertig</string>
    <string name="beispiel_text_instruction">Tuff, tuff</string>

    <string name="photo_dialog_congrats">Super!</string>
    <string name="photo_dialog_title">Aufgabe geschafft</string>
    <string name="photo_dialog_text">Magst du ein Photo von deinem Ergebnis machen?</string>

    <string name="of_course">Na klar!</string>
</resources>
