<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background_shape"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/header_photo_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_header_shape"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_dialog_congrats"
            android:textAppearance="@style/PhotoDialogCongrats"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            style=""
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_dialog_title"
            android:textAppearance="@style/PhotoDialogTitle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="32dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_photo_dialog"
        android:textAppearance="@style/PhotoDialogText"
        android:text="@string/photo_dialog_text"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/button_take_picture"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_button_background"
        android:backgroundTint="@color/primaryYellow"
        android:text="@string/of_course"
        android:layout_gravity="center"
        android:gravity="center" />

</LinearLayout>