<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/completed_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:textColor="@color/headlineGrey"
        android:text="@string/diary_title"
        android:layout_marginTop="21dp"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>
    <TextView
        android:id="@+id/completed_challenge_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textColor="@color/headlineGrey"
        android:text="@string/challenge"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completed_title_text_view">
    </TextView>
    <TextView
        android:id="@+id/completed_challenge_description_text_view"
        android:layout_width="match_parent"
        android:textColor="@color/headlineGrey"
        android:maxLines="2"
        android:layout_height="32dp"
        android:textSize="16dp"
        android:text="@string/completed_challenge_description"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/completed_challenge_title_text_view"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:riv_corner_radius="12dp"
        app:layout_constraintTop_toBottomOf="@id/completed_challenge_description_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/completed_challenge_rounded_image_view">
    </com.makeramen.roundedimageview.RoundedImageView>
</androidx.constraintlayout.widget.ConstraintLayout>